--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
     left: 0;
     transition: 0.9s;
     width: 100%;
-    box-shadow: 2px 3px 4px#555555;
+    box-shadow: 1px 2px 2px#313131;
     z-index: 4;
   }
 .text-banner{
@@ -62,7 +62,7 @@
     Background-repeat: no-repeat; 
     Background-size:cover;
     background-position: center;
-    height: 100%;
+    height: 60vh;
 }
 .above img{
     width: 25px;
@@ -109,6 +109,14 @@
     margin-top: 2em;
 }
 
+.stretch{
+    align-items: stretch;
+}
+
+.wrap{
+    display: flex;
+    flex-wrap: wrap;
+}
 .main-bottom{
     display: flex;
     flex-wrap: wrap;
@@ -121,6 +129,8 @@
 .card {
     align-items: center;
     text-align: center;
+    
+   
 }
 .main-content img{
     width: 4em;
@@ -160,7 +170,6 @@
     justify-content: center;
     margin: 0 auto;
     text-align: center;
-    border: 0;
 }
 .text-small-card{
     font-size: 9pt;
@@ -168,6 +177,39 @@
 .client{
     height: 40vh;
 }
+
+.container-whatsapp{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    position: fixed;
+    bottom: 30px;
+    right: 20px;
+    padding: 10px;
+    min-width: 40px;
+    max-width: 40px;
+    z-index: 9999;
+}
+
+.btn-whatsapp{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius:50%;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    transition: 0.5s;
+}
+
+.btn-whatsapp:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 0px 8px #4d9446;
+}
+
 .contact{
     background-color: #3a3939;
     width: 100%;
@@ -193,6 +235,7 @@ footer{
    color: #d6d4d4;
    padding: 0 15px 0 15px;
    margin: 10px;
+   
 }
 .contact div:last-child{
     text-align: right;
@@ -243,6 +286,11 @@ footer{
     width: 20vh;
 }
 
+.copy{
+    font-size:.8rem!important ;
+    margin: 0 auto;
+}
+
 @media (max-width: 982px){
     .carousel-inner{
     height: 25em;
@@ -266,6 +314,11 @@ footer{
     .card {
         text-align: center;
     }
+    .banner-location{
+       
+        height: 40rem;
+        
+    }
 }
 @media (max-width: 440px){
     .banner-location{
@@ -282,8 +335,28 @@ footer{
         justify-content: center;
     
     }
+    .footer-content{
+       text-align: center;
+        
+    }
+
+    
     .client-img img{
         margin: 25px;
         width: 10vh;
+    }
+    .back1, .back2, .back3, .back4 {
+        Background-repeat: no-repeat; 
+        Background-size:cover;
+        background-position: center;
+        height: 40vh;
+    }
+    .btn-whatsapp{
+        width: 40px;
+        height: 40px;
+    }
+    .container-whatsapp{
+        bottom: 20px;
+        right: 7px;
     }
 }
